daily: segment 38 continued — Kosmyna EEG study, zhihu cross-validation, 203 commits

--- a/lamarck/vault/Daily/2026-02-16.md
+++ b/lamarck/vault/Daily/2026-02-16.md
@@ -1372,3 +1372,14 @@ Highest-leverage work this segment: rewriting review docs to make Ren's decision
 
 ### State: 200 commits
 Dog-fooding Understand on pi validates the product: it generates questions that expose real gaps in understanding of code we modified. The launch candidate summary grids make Ren's video review even faster.
+
+### Continued: MIT Media Lab EEG study (evidence #21)
+- Found Kosmyna et al. 2025: "Your Brain on ChatGPT" — 54 participants, EEG, 4 months longitudinal
+- LLM users = weakest brain connectivity, persistent underengagement even after AI removed (session 4 swap)
+- CNN, Nature, CBS, The New Yorker, USA Today, Time coverage — most widely reported study in our chain
+- Evidence chain now 21 sources
+- Exploration 089: video concept for this study (escalation format), not producing until directed
+- Zhihu data cross-validation: "kids using AI for homework" at heat 58, "1-person AI company" at heat 523
+
+### State: 203 commits
+The Kosmyna study is qualitatively different from other evidence: longitudinal + EEG + swap experiment + mainstream media. Not a for-loop add — genuinely new class of evidence.
